--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,8 +6,8 @@
     display: flex;
     padding: 10px;
     justify-content: space-between;
-    position: sticky;
-    top: 0px;
+    /* position: sticky;
+    top: 0px; */
 }
 .navbar ul {
   display: flex;
