--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -1,34 +1,31 @@
-
-.videocard{
-    
-    height: 16rem;
-    width: 22rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'DIN 2014', sans-serif; 
-    font-weight: 700;
-    box-shadow: 0px 0px 10px 4px;
-    margin: 1rem;
+.videocard {
+  height: 16rem;
+  width: 22rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: "DIN 2014", sans-serif;
+  font-weight: 700;
+  box-shadow: 0px 0px 10px 4px;
+  margin: 1rem;
 }
 
-.videocard img{
- height: 60%;
- width: 100%;
+.videocard img {
+  height: 60%;
+  width: 100%;
 }
-.videocard p{
-    text-align: center;
-    
+.videocard p {
+  text-align: center;
 }
-.videocard button{
-    height: 15%;
-    background-color: #9e0808;
-    color: white;
-    font-weight: 700;
-    font-family: 'DIN 2014', sans-serif;
-    cursor: pointer;
-    border: 1px solid #9e0808;
+.videocard button {
+  height: 15%;
+  background-color: #9e0808;
+  color: white;
+  font-weight: 700;
+  font-family: "DIN 2014", sans-serif;
+  cursor: pointer;
+  border: 1px solid #9e0808;
 }
-.videocard button:hover{
-    background-color:#d20a0a; 
+.videocard button:hover {
+  background-color: #d20a0a;
 }
