--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -11,8 +11,8 @@
 }
 
 .videocard img {
-  height: 60%;
-  width: 100%;
+    height: 71%;
+    width: 100%;
 }
 .videocard p {
   text-align: center;
@@ -28,4 +28,13 @@
 }
 .videocard button:hover {
   background-color: #d20a0a;
+}
+
+.link{
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
 }
