--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -12,10 +12,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  box-shadow: 0px 0px 10px 4px #AAA;
+  box-shadow: 0px 0px 10px 4px #aaa;
 }
-.signup h2{
-    text-align: center;
+.signup h2 {
+  text-align: center;
 }
 
 .firstname-container {
@@ -47,15 +47,15 @@
   cursor: pointer;
 }
 .btn-register:hover {
-   background-color: #d20a0a;
+  background-color: #d20a0a;
 }
-.account-login{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+.account-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
-.terms input{
-    margin-right: 5px;
-    cursor: pointer;
+.terms input {
+  margin-right: 5px;
+  cursor: pointer;
 }
