--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -11,13 +11,13 @@
 }
 
 .videocard img {
-    height: 71%;
-    width: 100%;
+  height: 71%;
+  width: 100%;
 }
 .videocard p {
   text-align: center;
 }
-.videocard button {
+.btn-watchnow {
   height: 15%;
   background-color: #9e0808;
   color: white;
@@ -26,15 +26,31 @@
   cursor: pointer;
   border: 1px solid #9e0808;
 }
-.videocard button:hover {
+.btn-watchnow:hover {
   background-color: #d20a0a;
 }
 
-.link{
-    text-decoration: none;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
+.link {
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+.videocard div {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+ 
+}
+
+.btn-delete {
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
+.btn-delete:hover{
+  color:var(--secondary-color)
 }
