--- a/src/components/Comment/Comment.css
+++ b/src/components/Comment/Comment.css
@@ -1,34 +1,58 @@
-.comment{
-    margin-left: 1rem;
-    width: 30vw;
-    height: 70vh;
-    position: relative;
-    box-shadow: 0px 0px 10px 4px #aaa;
+.comment {
+  margin-left: 1rem;
+  width: 30vw;
+  height: 70vh;
+  position: relative;
+  box-shadow: 0px 0px 10px 4px #aaa;
+  overflow: auto;
+}
+.comment-header {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 3px solid #9e0808;
+  color: var(--primary-color);
+}
+
+.comment-text {
+  margin: 10px;
+  background-color: #d20a0a;
+  min-height: 10%;
+  padding: 10px;
+  width: 87.5%;
+  color: white;
+}
+
+.comment-add {
+  position: absolute;
+  bottom: 0px;
+  height: 10%;
+  width: 100%;
+  border-top: 3px solid #9e0808;
+  display: flex;
+}
+
+.comment-add input {
+  width: 80%;
+  height: 100%;
+  outline: none;
+  border: none;
+  padding: 5px;
+}
+
+.comment-add button {
+  width: 20%;
+  border: none;
+  background: var(--secondary-color);
+  color: #fff;
+  cursor: pointer;
+  
+}
+
+.comment-body{
+    height: 80%;
+    margin-bottom: 1rem;
     overflow: auto;
-}
-.comment-header{
-    height: 10%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 3px solid #9e0808;
-}
-.comment input{
-    position: absolute;
-    bottom: 0px;
-    height: 10%;
-    width: 100%;
-    padding: 10px;
-    border: none;
-    outline: none;
-    border-top: 3px solid #9e0808;
-}
-.comment-text{
-    margin: 10px;
-    background-color: #d20a0a;;
-    min-height: 10%;
-    padding: 10px;
-    width: 87.5%;
-    color: white;
 }
