--- a/src/components/VideoCardContainer/VideoCardContainer.css
+++ b/src/components/VideoCardContainer/VideoCardContainer.css
@@ -28,7 +28,7 @@
 }
 
 .video-filters button{
-    background: var(--primary-color);
+    background-color: var(--primary-color);
     padding: 0.5rem;
     color:#fff;
     margin: 0 1rem;
@@ -45,4 +45,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+#primary{
+    background-color: var(--secondary-color);
 }
