--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -1,25 +1,30 @@
+.categories {
+  height: 10vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  box-shadow: 0px 0px 10px 4px;
+  font-family: "DIN 2014", sans-serif;
+  font-size: 0.6rem;
+}
+.categories li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+  color: #9e0808;
+  cursor: pointer;
+}
+.categories li span {
+  margin: auto;
+}
+.categories li:hover {
+  color: #d20a0a;
+}
 
-.categories{
-    height: 10vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    list-style: none;
-    box-shadow: 0px 0px 10px 4px;
-    font-family: 'DIN 2014', sans-serif;
-    
-}
-.categories li{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: baseline;
-    color:#9e0808;
-    cursor: pointer;
-}
-.categories li span{
-   margin: auto;
-}
-.categories li:hover{
-    color:#d20a0a;
+@media (min-width: 30rem) {
+    .categories{
+        font-size: 1rem;
+    }
 }
