--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -7,13 +7,14 @@
   font-family: "DIN 2014", sans-serif;
 }
 .login {
-  width: 22rem;
+  width: 18rem;
   height: 20rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 0px 0px 10px 4px #aaa;
+  font-size: 0.8rem;
 }
 .login h2 {
   text-align: center;
@@ -59,6 +60,13 @@
   cursor: pointer;
 }
 
-.remember input{
-    margin-right: 4px;
+.remember input {
+  margin-right: 4px;
+}
+
+@media (min-width: 30rem) {
+  .login {
+    width: 22rem;
+    font-size: 1rem;
+  }
 }
