--- a/src/components/Comment/Comment.css
+++ b/src/components/Comment/Comment.css
@@ -1,11 +1,13 @@
 .comment {
-  margin-left: 1rem;
-  width: 30vw;
-  height: 70vh;
+  margin-top: 1rem;
+  margin-left: 0;
+  width: 85vw;
+  height: 100vh;
   position: relative;
   box-shadow: 0px 0px 10px 4px #aaa;
   overflow: auto;
 }
+
 .comment-header {
   height: 10%;
   width: 100%;
@@ -48,11 +50,22 @@
   background: var(--secondary-color);
   color: #fff;
   cursor: pointer;
-  
 }
 
-.comment-body{
-    height: 80%;
-    margin-bottom: 1rem;
-    overflow: auto;
+.comment-body {
+  height: 80%;
+  margin-bottom: 1rem;
+  overflow: auto;
+}
+
+@media (min-width: 40rem) {
+    .comment {
+        margin-top: 0;
+        margin-left: 1rem;
+        width: 30vw;
+        height: 70vh;
+        position: relative;
+        box-shadow: 0px 0px 10px 4px #aaa;
+        overflow: auto;
+      }
 }
