--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -1,4 +1,5 @@
 .videocard {
+  max-width: 22rem;
   height: 16rem;
   display: flex;
   flex-direction: column;
@@ -42,7 +43,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
- 
+  max-width: 20rem;
 }
 
 .btn-delete {
