--- a/src/components/AutoComplete/AutoComplete.css
+++ b/src/components/AutoComplete/AutoComplete.css
@@ -1,6 +1,10 @@
-.auto-input li:hover {
+.auto-input {
   background-color: var(--primary-color);
-  color: var(--secondary-color);
+  color: var(--secondary-color2);
+  cursor: pointer;
+}
+ li:hover {
+ 
   cursor: pointer;
 }
 
