--- a/src/components/VideoOptions/VideoOption.css
+++ b/src/components/VideoOptions/VideoOption.css
@@ -48,6 +48,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 10px;
+  
 }
 
 .video-option-img {
@@ -82,6 +84,7 @@
   .video-option-description {
     display: flex;
     flex-direction: row;
+    margin-bottom: 10px;
   }
   .video-option-header {
     margin: 1rem;
