--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,19 @@
   --footer-color: #18181b;
   --secondary-color2: #fff;
 }
+
+::-webkit-scrollbar{
+   width:5px
+}
+::-webkit-scrollbar-track{
+   background: #fee2e2;
+ 
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--primary-color);
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: var(--secondary-color);
+}
+
+
