--- a/src/components/Comment/Comment.css
+++ b/src/components/Comment/Comment.css
@@ -57,14 +57,26 @@
   overflow: auto;
 }
 
+.comment-box {
+  position: relative;
+}
+
+.comment-delete {
+  position: absolute;
+  top: 6px;
+  right: 14px;
+  color: var(--secondary-color2);
+  cursor: pointer;
+}
+
 @media (min-width: 40rem) {
-    .comment {
-        margin-top: 0;
-        margin-left: 1rem;
-        width: 30vw;
-        height: 70vh;
-        position: relative;
-        box-shadow: 0px 0px 10px 4px #aaa;
-        overflow: auto;
-      }
+  .comment {
+    margin-top: 0;
+    margin-left: 1rem;
+    width: 30vw;
+    height: 70vh;
+    position: relative;
+    box-shadow: 0px 0px 10px 4px #aaa;
+    overflow: auto;
+  }
 }
