--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,18 @@
   --box-shadow2: 0px 0px 0 0.5px #aaa;
   --footer-color: #18181b;
   --secondary-color2: #fff;
+  --secondary-color3: #ef4444;
 }
 
-::-webkit-scrollbar{
-   width:5px
+::-webkit-scrollbar {
+  width: 5px;
 }
-::-webkit-scrollbar-track{
-   background: #fee2e2;
- 
+::-webkit-scrollbar-track {
+  background: #fee2e2;
 }
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background-color: var(--primary-color);
 }
-::-webkit-scrollbar-thumb:hover{
+::-webkit-scrollbar-thumb:hover {
   background-color: var(--secondary-color);
 }
-
-
