--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   --box-shadow2: 0px 0px 0 0.5px #aaa;
   --footer-color: #18181b;
   --secondary-color2: #fff;
-  --secondary-color3: #ef4444;
+  --secondary-color3: #7f1d1d;
 }
 
 ::-webkit-scrollbar {
