--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,10 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--secondary-color);
 }
+
+#dark {
+  background-color: var(--footer-color);
+  color: var(--secondary-color);
+}
+
+
