--- a/src/App.css
+++ b/src/App.css
@@ -26,4 +26,14 @@
   color: var(--secondary-color);
 }
 
+#dark-font{
+  color:var(--secondary-color2)
+}
+.card-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-bottom: 4px solid var(--primary-color);
+  padding-bottom: 1rem;
+}
 
