--- a/src/components/Upload/Upload.css
+++ b/src/components/Upload/Upload.css
@@ -2,9 +2,9 @@
 .upload-container{
     height: 74vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
     border-bottom: 4px solid var(--primary-color);
     padding-bottom: 1rem;
     margin-top: 2px;
@@ -18,6 +18,7 @@
     align-items: center;
     box-shadow: var(--box-shadow1);
     padding: 1rem;
+    margin-top: 1rem;
 }
 
 .upload form{
@@ -35,16 +36,13 @@
 }
 
 .upload-container button{
-    position: absolute;
-    bottom: -8px;
-    width: 5rem;
-    height: 2rem;
     background-color: #d20a0a;
     border: 2px solid #d20a0a;
     color: white;
     font-family: "DIN 2014", sans-serif;
     cursor: pointer;
     margin: 1rem;
+    padding: 8px;
     
 }
 
